Move dismissing handles on editing commands to Blink

Samsung's and LG's email apps override the action mode methods in
SelectionPopupController.java which leads to touch handles not being
dismissed on pasting/cutting which in turn causes bugs like the one
listed below. This CL moves the dismissing from SelectionPopupController
to Blink. Previously we always kept the handles when the selection
changed because of a command. Now the handles are only kept if the
resulting selection is a range selection.

Bug: 775897
Change-Id: I54d58b1566fb536ff2007fd81b3e866140b834c9
Reviewed-on: https://chromium-review.googlesource.com/757552
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Pedro Amaral <amaralp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514984}
Former-commit-id: e55d1bb1d54e0cb898e2884213dc86aa2dc42270